Small RTL fix: align the numbers in get-help to the center of the bubbles

--- a/fedoraproject.org/static/css/fpo960-rtl.css
+++ b/fedoraproject.org/static/css/fpo960-rtl.css
@@ -188,3 +188,7 @@ span#logo {
 	color: transparent !important;
 	text-indent: 0px !important;
 }
+/* aligns the numbers in get-help to the center of the bubbles */
+div.num p {
+	margin-right: 0;
+}
